--- a/shellExec/app/src/main/assets/nginx/conf/nginx.conf
+++ b/shellExec/app/src/main/assets/nginx/conf/nginx.conf
@@ -1,5 +1,5 @@
 
-user  root;
+#user  nobody;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -42,7 +42,7 @@ http {
 
         location / {
             root   html;
-            index  index.html;
+            index  index.html index.htm;
         }
 
         #error_page  404              /404.html;
@@ -114,13 +114,4 @@ http {
     #    }
     #}
 
-}
-rtmp {
-    server {
-        listen 1935;
-        application live1 {
-            live on;
-            push rtmp://192.168.1.140:1935/live1/room1;
-        }
-    }
 }
